--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,10 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/react-redux": "^7.1.21",
+    "firebase": "^9.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-image-crop": "^9.0.5",
+    "react-easy-crop": "^4.0.1",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.2"
